modify: junit테스트 수정